<?xml version="1.0"?>
<package format="3">
  <name>hss_vision</name>
  <version>1.0.0</version>
  <description>Camera driver node (OpenCV + cv_bridge) publishing images and custom HSS CameraInfo.</description>

  <maintainer email="tayfurcnr@gmail.com">Gazi-Uzay</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager_py</depend>
  <exec_depend>camera_calibration_parsers</exec_depend>
  <depend>rcl_interfaces</depend>
  <!-- HSS custom message -->
  <depend>hss_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>